# useractivity

./: .hgsubstate  CMakeLists.txt  README  definitions.h  iuseractivity.h  useractivity.cpp  useractivity.h  useractivity.pri  useractivity.pro  useractivitydialog.cpp  useractivitydialog.h  useractivitydialog.ui
resources/activityicons/shared/: .directory  icon.def.xml
resources/menuicons/shared/: useractivity.def.xml
translations/.tx/: config
translations/de/: useractivity.ts
translations/en/: useractivity.ts
translations/es/: useractivity.ts
translations/pl/: useractivity.ts
translations/ru/: useractivity.qm  useractivity.ts
translations/uk/: useractivity.ts
